# UxpShell

./: .gitignore  Access.cpp  Access.hpp  CMakeLists.txt  Command.cpp  Command.hpp  Expression.cpp  Expression.hpp  Parser.cpp  Parser.hpp  Pipeline.cpp  Pipeline.hpp  PipelineContext.'cpp  PipelineContext.cpp  PipelineContext.hpp  PipelineError.cpp  PipelineError.hpp  README.md  Routine-back.'cpp  Routine.cpp  Routine.hpp  Scanner.cpp  Scanner.hpp  Shell.cpp  Shell.hpp  Streams.cpp  Streams.hpp  Token.cpp  Token.hpp  Variable.cpp  Variable.h  VariableContext.hpp  VariablesTable.cpp  VariablesTable.h  echo.cpp  main.cpp  pipeline
Parser/: Expression.cpp  Expression.hpp  Parser.cpp  Parser.hpp
Scanner/: Token.hpp
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/builds/: Shell
programs/: args_increment.cpp  first-tested.cpp  increment.cpp  tested.cpp
test/: UXP_Shell_zmienne.cpp  access_check.cpp  destiny  first-tested  first-tested.cpp  increment.cpp  test-background-foreground.cpp  test-pipeline.cpp  test1.cpp  write-test.cpp
